[package]
name = "twitch-subscroll"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
